tests/errors/15_do_variable_type_error.f
      PROGRAM DO_VAR_TYPE_ERROR
      REAL I
      DO 10 I = 1, 3
   10 CONTINUE
      END
